Fixed sidebar align. Fixed font encoding - now UTF-8.

--- a/styles/JokeUniMainStyle.css
+++ b/styles/JokeUniMainStyle.css
@@ -52,7 +52,6 @@ body {
         background: green;
         border: 3px double yellow;
         box-shadow: 6px 6px 6px black;
-        width: 10%;
     }
     section {
 		float:left;
